--- a/pom.xml
+++ b/pom.xml
@@ -2866,5 +2866,54 @@
     <profile>
       <id>sparkr</id>
     </profile>
+
+    <!--
+      Allows to add repository using 'MAPR_MAVEN_REPO' environment variable.
+      Declares default Snapshots repository if the variable is not set. 
+      Should be deleted before release!
+    -->
+    <profile>
+      <id>additional-mapr-repository-defined</id>
+      <activation>
+        <property>
+          <name>env.MAPR_MAVEN_REPO</name>
+        </property>
+      </activation>
+      <repositories>
+        <repository>
+          <id>mapr-additional-repo</id>
+          <name>MapR Additional Repository</name>
+          <url>${env.MAPR_MAVEN_REPO}</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+    </profile>
+    <profile>
+      <id>additional-mapr-repository-undefined</id>
+      <activation>
+        <property>
+          <name>!env.MAPR_MAVEN_REPO</name>
+        </property>
+      </activation>
+      <repositories>
+        <repository>
+          <id>mapr-additional-repo</id>
+          <name>MapR Additional Repository</name>
+          <url>http://maven.corp.maprtech.com/nexus/content/repositories/snapshots/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+    </profile>
+
   </profiles>
 </project>
