--- a/external/kafka-producer/pom.xml
+++ b/external/kafka-producer/pom.xml
@@ -89,6 +89,18 @@
                     <groupId>org.apache.zookeeper</groupId>
                     <artifactId>zookeeper</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.hadoop</groupId>
+                    <artifactId>maprfs</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.streams</groupId>
+                    <artifactId>mapr-streams</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.db</groupId>
+                    <artifactId>maprdb</artifactId>
+                </exclusion>
             </exclusions>
             <scope>test</scope>
         </dependency>
@@ -116,6 +128,18 @@
                 <exclusion>
                     <groupId>org.apache.zookeeper</groupId>
                     <artifactId>zookeeper</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.hadoop</groupId>
+                    <artifactId>maprfs</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.streams</groupId>
+                    <artifactId>mapr-streams</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.db</groupId>
+                    <artifactId>maprdb</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
