--- a/external/kafka-0-9/pom.xml
+++ b/external/kafka-0-9/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.spark</groupId>
     <artifactId>spark-parent_2.11</artifactId>
-    <version>2.3.2.0-mapr-SNAPSHOT</version>
+    <version>2.3.2.0-mapr-1901</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_${scala.binary.version}</artifactId>
-      <version>1.1.1-mapr-SNAPSHOT</version>
+      <version>1.1.1-mapr-1901</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
