--- a/external/kafka-producer/pom.xml
+++ b/external/kafka-producer/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-parent_2.11</artifactId>
-        <version>2.3.2.0-mapr-SNAPSHOT</version>
+        <version>2.3.2.0-mapr-1901</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_${scala.binary.version}</artifactId>
-            <version>1.1.1-mapr-SNAPSHOT</version>
+            <version>1.1.1-mapr-1901</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.jmx</groupId>
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>1.1.1-mapr-SNAPSHOT</version>
+            <version>1.1.1-mapr-1901</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.jmx</groupId>
