--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>org.apache.spark</groupId>
   <artifactId>spark-parent_2.11</artifactId>
-  <version>2.3.2.0-mapr-SNAPSHOT</version>
+  <version>2.3.2.0-mapr-1901</version>
   <packaging>pom</packaging>
   <name>Spark Project Parent POM</name>
   <url>http://spark.apache.org/</url>
@@ -124,7 +124,7 @@
     <sbt.project.name>spark</sbt.project.name>
     <slf4j.version>1.7.16</slf4j.version>
     <log4j.version>1.2.17</log4j.version>
-    <hadoop.version>2.7.0-mapr-1803</hadoop.version>
+    <hadoop.version>2.7.0-mapr-1808</hadoop.version>
     <maprfs.version>6.1.0-mapr</maprfs.version>
     <protobuf.version>2.5.0</protobuf.version>
     <yarn.version>${hadoop.version}</yarn.version>
@@ -133,8 +133,8 @@
     <curator.version>2.7.1</curator.version>
     <hive.group>org.apache.hive</hive.group>
     <!-- Version used in Maven Hive dependency -->
-    <hive.version>1.2.0-mapr-spark-MEP-6.0.0</hive.version>
-    <hive.2.version>2.3.3-mapr</hive.2.version>
+    <hive.version>1.2.0-mapr-spark-MEP-6.0.0-1901</hive.version>
+    <hive.2.version>2.3.3-mapr-1901</hive.2.version>
     <!-- Version used for internal directory structure -->
     <hive.version.short>1.2.0</hive.version.short>
     <derby.version>10.12.1.1</derby.version>
