--- a/external/kinesis-asl-assembly/pom.xml
+++ b/external/kinesis-asl-assembly/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.spark</groupId>
     <artifactId>spark-parent_2.11</artifactId>
-    <version>2.2.1-mapr-19011</version>
+    <version>2.2.1-mapr-1901-r11</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
