--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>org.apache.spark</groupId>
   <artifactId>spark-parent_2.11</artifactId>
-  <version>2.2.1-mapr-1901-r1</version>
+  <version>2.2.1-mapr-1901-r2</version>
   <packaging>pom</packaging>
   <name>Spark Project Parent POM</name>
   <url>http://spark.apache.org/</url>
@@ -134,7 +134,7 @@
     <curator.version>2.7.1</curator.version>
     <hive.group>org.apache.hive</hive.group>
     <!-- Version used in Maven Hive dependency -->
-    <hive.version>1.2.0-mapr-1901-spark</hive.version>
+    <hive.version>1.2.0-mapr-1901-spark-r1</hive.version>
     <hive.2.version>2.1.1-mapr-1901</hive.2.version>
     <!-- Version used for internal directory structure -->
     <hive.version.short>1.2.0</hive.version.short>
