--- a/external/kafka-producer/pom.xml
+++ b/external/kafka-producer/pom.xml
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_${scala.binary.version}</artifactId>
-            <version>1.1.1-mapr-SNAPSHOT</version>
+            <version>${kafka.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.jmx</groupId>
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>1.1.1-mapr-SNAPSHOT</version>
+            <version>${kafka.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.jmx</groupId>
