--- a/external/kafka-producer/pom.xml
+++ b/external/kafka-producer/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-parent_2.11</artifactId>
-        <version>2.3.1-mapr-1808-r2</version>
+        <version>2.3.1-mapr-1808-r3</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_${scala.binary.version}</artifactId>
-            <version>1.1.1-mapr-1808-r1</version>
+            <version>1.1.1-mapr-1901</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.jmx</groupId>
@@ -88,6 +88,18 @@
                 <exclusion>
                     <groupId>org.apache.zookeeper</groupId>
                     <artifactId>zookeeper</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.hadoop</groupId>
+                    <artifactId>maprfs</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.streams</groupId>
+                    <artifactId>mapr-streams</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.db</groupId>
+                    <artifactId>maprdb</artifactId>
                 </exclusion>
             </exclusions>
             <scope>test</scope>
@@ -95,7 +107,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>1.1.1-mapr-1808-r1</version>
+            <version>1.1.1-mapr-1901</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.jmx</groupId>
@@ -116,6 +128,18 @@
                 <exclusion>
                     <groupId>org.apache.zookeeper</groupId>
                     <artifactId>zookeeper</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.hadoop</groupId>
+                    <artifactId>maprfs</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.streams</groupId>
+                    <artifactId>mapr-streams</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mapr.db</groupId>
+                    <artifactId>maprdb</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
