--- a/pom.xml
+++ b/pom.xml
@@ -134,8 +134,8 @@
     <curator.version>2.7.1</curator.version>
     <hive.group>org.apache.hive</hive.group>
     <!-- Version used in Maven Hive dependency -->
-    <hive.version>1.2.0-mapr-spark</hive.version>
-    <hive.2.version>2.1.1-mapr</hive.2.version>
+    <hive.version>1.2.0-mapr-spark-SNAPSHOT</hive.version>
+    <hive.2.version>2.1.1-mapr-SNAPSHOT</hive.2.version>
     <!-- Version used for internal directory structure -->
     <hive.version.short>1.2.0</hive.version.short>
     <derby.version>10.12.1.1</derby.version>
@@ -244,10 +244,10 @@
       <name>MapR Repository</name>
       <url>${env.MAPR_MAVEN_REPO}</url>
       <releases>
-        <enabled>true</enabled>
+        <enabled>false</enabled>
       </releases>
       <snapshots>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
       </snapshots>
     </repository>
     <repository>
