--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
     <hive.group>org.apache.hive</hive.group>
     <!-- Version used in Maven Hive dependency -->
     <hive.version>1.2.0-mapr-spark-MEP-6.0.0-SNAPSHOT</hive.version>
-    <hive.2.version>2.3.3-mapr-SNAPSHOT</hive.2.version>
+    <hive.2.version>2.3.3-mapr-1901</hive.2.version>
     <!-- Version used for internal directory structure -->
     <hive.version.short>1.2.0</hive.version.short>
     <derby.version>10.12.1.1</derby.version>
@@ -256,7 +256,7 @@
       <name>MapR Repository</name>
       <url>${env.MAPR_MAVEN_REPO}</url>
       <releases>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
       </releases>
       <snapshots>
         <enabled>true</enabled>
