--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>org.apache.spark</groupId>
   <artifactId>spark-parent_2.11</artifactId>
-  <version>2.4.0.0-mapr-SNAPSHOT</version>
+  <version>2.4.0.0-mapr-620</version>
   <packaging>pom</packaging>
   <name>Spark Project Parent POM</name>
   <url>http://spark.apache.org/</url>
@@ -134,7 +134,7 @@
     <curator.version>2.7.1</curator.version>
     <hive.group>org.apache.hive</hive.group>
     <!-- Version used in Maven Hive dependency -->
-    <hive.version>1.2.0-mapr-spark-MEP-6.0.0-SNAPSHOT</hive.version>
+    <hive.version>1.2.0-mapr-spark-MEP-6.0.0-1904</hive.version>
     <hive.2.version>2.3.3-mapr-1901</hive.2.version>
     <!-- Kafka version -->
     <kafka.version>1.1.1-mapr-1901</kafka.version>
