--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.spark</groupId>
     <artifactId>spark-parent_2.12</artifactId>
-    <version>3.3.0.0-eep-SNAPSHOT</version>
+    <version>3.3.0.0-eep-900</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
